// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column using Canvas should handle event mouseexit correctly: REMOVE_DROPLINE action 1`] = `
Array [
  Object {
    "payload": Object {
      "datum": Object {
        "x": "A",
        "y": 5,
      },
      "name": "x",
      "value": "A",
    },
    "type": "EVENT.REMOVE_TOOLTIP_ITEM",
  },
]
`;

exports[`Column using Canvas should handle event mouseexit correctly: REMOVE_DROPLINE action 2`] = `
Array [
  Object {
    "payload": Object {
      "datum": Object {
        "x": "A",
        "y": 5,
      },
      "fill": Rgb {
        "b": 220,
        "g": 193,
        "opacity": 0.7,
        "r": 153,
      },
      "name": "y",
      "seriesType": "column",
      "value": 5,
    },
    "type": "EVENT.REMOVE_TOOLTIP_ITEM",
  },
]
`;

exports[`Column using Canvas should handle event mouseexit correctly: REMOVE_MARKER action 1`] = `
Array [
  Object {
    "payload": undefined,
    "type": "EVENT.SET_TOOLTIP_COLOR",
  },
]
`;

exports[`Column using Canvas should handle event mouseover correctly: ADD_DROPLINE action 1`] = `
Array [
  Object {
    "payload": Rgb {
      "b": 220,
      "g": 193,
      "opacity": 0.7,
      "r": 153,
    },
    "type": "EVENT.SET_TOOLTIP_COLOR",
  },
]
`;

exports[`Column using Canvas should handle event mouseover correctly: ADD_DROPLINE action 2`] = `
Array [
  Object {
    "payload": Object {
      "datum": Object {
        "x": "A",
        "y": 5,
      },
      "name": "x",
      "value": "A",
    },
    "type": "EVENT.ADD_TOOLTIP_ITEM",
  },
]
`;

exports[`Column using Canvas should handle event mouseover correctly: ADD_MARKER action 1`] = `
Array [
  Object {
    "payload": FakeMouseEvent {
      "isTrusted": false,
      "offsetX": 0,
      "offsetY": 0,
      "pageX": 25,
      "pageY": 90,
      "x": 0,
      "y": 0,
    },
    "type": "EVENT.MOUSE_MOVE",
  },
]
`;

exports[`Column using SVG should handle event mouseexit correctly: REMOVE_DROPLINE action 1`] = `
Array [
  Object {
    "payload": Object {
      "color": "rgba(153, 193, 220, 0.7)",
      "isHorizontal": true,
      "x1": 0,
      "x2": 0,
      "y1": 75,
      "y2": 75,
    },
    "type": "EVENT.REMOVE_DROPLINE",
  },
]
`;

exports[`Column using SVG should handle event mouseexit correctly: REMOVE_DROPLINE action 2`] = `undefined`;

exports[`Column using SVG should handle event mouseexit correctly: REMOVE_MARKER action 1`] = `
Array [
  Object {
    "payload": Object {
      "datum": Object {
        "x": "A",
        "y": 5,
      },
      "fill": Rgb {
        "b": 220,
        "g": 193,
        "opacity": 0.7,
        "r": 153,
      },
      "name": "y",
      "seriesType": "column",
      "value": 5,
    },
    "type": "EVENT.REMOVE_TOOLTIP_ITEM",
  },
]
`;

exports[`Column using SVG should handle event mouseover correctly: ADD_DROPLINE action 1`] = `
Array [
  Object {
    "payload": Object {
      "datum": Object {
        "x": "A",
        "y": 5,
      },
      "name": "x",
      "value": "A",
    },
    "type": "EVENT.ADD_TOOLTIP_ITEM",
  },
]
`;

exports[`Column using SVG should handle event mouseover correctly: ADD_DROPLINE action 2`] = `
Array [
  Object {
    "payload": Object {
      "datum": Object {
        "x": "A",
        "y": 5,
      },
      "fill": Rgb {
        "b": 220,
        "g": 193,
        "opacity": 0.7,
        "r": 153,
      },
      "name": "y",
      "seriesType": "column",
      "value": 5,
    },
    "type": "EVENT.ADD_TOOLTIP_ITEM",
  },
]
`;

exports[`Column using SVG should handle event mouseover correctly: ADD_MARKER action 1`] = `
Array [
  Object {
    "payload": Rgb {
      "b": 220,
      "g": 193,
      "opacity": 0.7,
      "r": 153,
    },
    "type": "EVENT.SET_TOOLTIP_COLOR",
  },
]
`;

exports[`Column using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot column"
    >
      <rect
        class="column"
        height="0"
        style="stroke: #fff; opacity: 0.8; fill: rgba(153, 193, 220, 0.7);"
        width="50"
        x="0"
        y="100"
      />
      <rect
        class="column"
        height="0"
        style="stroke: #fff; opacity: 0.8; fill: rgba(153, 193, 220, 0.7);"
        width="50"
        x="50"
        y="100"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Column using SVG should skip rendering if there is no x scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot column"
    />
  </svg>
</DocumentFragment>
`;

exports[`Column using SVG should skip rendering if there is no y scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot column"
    />
  </svg>
</DocumentFragment>
`;
